Set word-break on nti-content to prevent activity view from growing too wide when there's otherwise unwrappable content.

--- a/src/main/resources/scss/profile/components/_profile-card-note.scss
+++ b/src/main/resources/scss/profile/components/_profile-card-note.scss
@@ -38,6 +38,11 @@
 		}
 	}
 
+	nti-content {
+		word-break: break-word;
+		word-wrap: break-word;
+	}
+
 	.note.heading {
 		border: none;
 		margin: 0;
